# NSTakeover

./: .gitignore  README.md  nstakeoverazure.py  pyproject.toml
nstakeover/: __init__.py  azure.py  cli.py  commands.py  dns.py  output.py
